# zhixianyunshu

./: .dockerignore  .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LOCAL_DEPLOY_GUIDE.md  Makefile  README.md  RELEASE_NOTES.md  SECURITY.md  TEST_REPORT.md  UPGRADE_PLAN.md
zhiqian/rag/: .dockerignore  Dockerfile  Makefile  pyproject.toml  requirements-ml.txt  requirements-test.txt  requirements-tts.txt  requirements.txt
zhiqian/rag/app/: config.py  main.py
zhiqian/rag/app/api/: crag.py  graphrag.py  ingest.py  mcp.py  query.py  reports.py  rerank.py  retrieve.py  structured.py  transpile.py  tts.py  validation.py
zhiqian/rag/app/core/: bge_m3.py  chunker.py  embedder.py  observability.py  reranker.py  schemas.py  sentence_splitter.py  sql_transpiler.py  structured_output.py
zhiqian/rag/app/graphs/: __init__.py  community.py  crag.py  evaluator.py  graphrag.py  refiner.py  state.py  web_search.py
zhiqian/rag/app/mcp/: README.md  server.py
zhiqian/rag/app/pipelines/: critic.py  hybrid_retrieve.py  retriever.py  rewriter.py  self_rag.py  validation.py
zhiqian/rag/app/reports/: README.md  typst_renderer.py
zhiqian/rag/app/store/: bm25_store.py  qdrant_store.py  rrf.py  vector_store.py
zhiqian/rag/app/templates/: validation_config_check.sh.j2  validation_dependency_check.sh.j2  validation_sql_diff.sql.j2  validation_type_mapping.sql.j2
zhiqian/rag/tests/: __init__.py  conftest.py  test_graphrag.py  test_mcp.py  test_ragas.py  test_retrieval.py  test_structured.py  test_transpile.py  test_validation.py
(+316 files in other folders)
