[project]
name = "zhiqian-rag"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "chromadb>=0.5",
  "sentence-transformers>=3.0",
  "FlagEmbedding>=1.2.10",
  "jieba>=0.42",
  "rank-bm25>=0.2.2",
  "networkx>=3.3",
  "langchain-text-splitters>=0.2",
  "httpx>=0.27",
  "loguru>=0.7",
  "jinja2>=3.1",
  "typer>=0.12",
  "PyYAML>=6.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "zhiqian_rag*"]
